--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+environs = "^11.0.0"
 
 [tool.poetry.group.formatter.dependencies]
 blue = "^0.9.1"
