--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 environs = "^11.0.0"
+pyrogram = "^2.0.106"
+uvloop = "^0.19.0"
 
 [tool.poetry.group.formatter.dependencies]
 blue = "^0.9.1"
