--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ environs = "^11.0.0"
 pyrogram = "^2.0.106"
 uvloop = "^0.19.0"
 sqlalchemy = "^2.0.28"
-psycopg-binary = "^3.1.18"
+alembic = "^1.13.1"
+asyncpg = "^0.29.0"
 
 [tool.poetry.group.formatter.dependencies]
 blue = "^0.9.1"
