--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,15 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 environs = "^11.0.0"
 pyrogram = "^2.0.106"
 uvloop = "^0.19.0"
 sqlalchemy = "^2.0.28"
 alembic = "^1.13.1"
 asyncpg = "^0.29.0"
+tgcrypto = "^1.2.5"
+loguru = "^0.7.2"
 
 [tool.poetry.group.formatter.dependencies]
 blue = "^0.9.1"
