chore(📦): Baixada biblioteca Pydantic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ alembic = "^1.13.1"
 asyncpg = "^0.29.0"
 tgcrypto = "^1.2.5"
 loguru = "^0.7.2"
+pydantic = "^2.6.4"
 
 [tool.poetry.group.formatter.dependencies]
 blue = "^0.9.1"
