--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,11 @@ redis = {extras = ["hiredis"], version = "^5.0.3"}
 [tool.poetry.group.formatter.dependencies]
 blue = "^0.9.1"
 isort = "^5.13.2"
+interrogate = "^1.5.0"
 
 [tool.poetry.group.dev.dependencies]
 taskipy = "^1.12.2"
+pre-commit = "^3.6.2"
 
 [build-system]
 requires = ["poetry-core"]
